# fork-scotty

./: README.md
.github/workflows/: codeql.yml
tnm/: BUILD_SUMMARY.txt  Makefile.in  README.md  TECLABCHANGES.md  TEST_FAILURES_ANALYSIS.md  TNMOVERVIEW.md  TODO  WINDOWS_ICMP_LIMITATIONS.md  changes  config.h.in  configure.ac  tclscotty
tnm/agents/: snmpd  snmpd-nfs.tcl  snmpd-proc.tcl  snmpd-tnm.tcl
tnm/compat/: resolv.h  tnm_compat.c
tnm/compat/rpc/: rpc.h
tnm/compat/sys/: cdefs.h
tnm/doc/: dns.md  dns.n.in  icmp.md  icmp.n.in  ined.n.in  job.md  job.n.in  map.md  map.n.in  mib.md  mib.n.in  netdb.md  netdb.n.in  nmicmpd.8  nmtrapd.8  ntp.md  ntp.n.in  quickref.md  scotty.1  smx.n.in  snmp.md  snmp.n.in  sunrpc.n.in  syslog.md  syslog.n.in  tnm.md  tnm.n.in  tnmDialog.n.in  tnmEther.n.in  tnmIetf.n.in  tnmInet.n.in  tnmMap.n.in  tnmMib.n.in  tnmScriptMib.n.in  tnmSmxProfiles.n.in  tnmSnmp.n.in  tnmTerm.n.in  udp.md  udp.n.in
tnm/doc/examples/: init.tcl
tnm/examples/: bridge  discover  emok  etherload  ifload  ifload2gif  mibgrep  nslook  pcnfs  rpcprobe  rstat  sbrowser.cgi  snmptrapd  snmpwalk  tcpspeed  traceroute  udploss  udpspeed  uiping  yanny
tnm/generic/: tnm.h  tnmDns.c  tnmIcmp.c  tnmIned.c  tnmInit.c  tnmInt.h  tnmJob.c  tnmMap.c  tnmMap.h  tnmMapEvent.c  tnmMapUtil.c  tnmNetdb.c  tnmNtp.c  tnmObj.c  tnmSmx.c  tnmUdp.c  tnmUtil.c
tnm/mibs/: ADSL-LINE-MIB  DISMAN-TRACEROUTE-MIB  MTA-MIB  README
tnm/snmp/: tnmAsn1.h  tnmMib.h  tnmMibTcl.c  tnmMibUtil.c  tnmSmiTcl.c  tnmSnmp.h  tnmSnmpAgent.c  tnmSnmpNet.c  tnmSnmpRecv.c  tnmSnmpSend.c  tnmSnmpTcl.c  tnmSnmpUsm.c  tnmSnmpUtil.c
tnm/tests/: all.tcl  dns.test  icmp.test  job.test  l.smx.test  map.test  mib.test  netdb.test  ntp.test  snmp.test  sunrpc.test  syslog.test  udp.test
tnm/unix/: Makefile.in  nmicmpd.c  tnmUnixIcmp.c  tnmUnixInit.c  tnmUnixPort.h  tnmUnixSnmp.c
tnm/win/: tnmWinIcmp.c  tnmWinInit.c  tnmWinLog.c  tnmWinPort.h  tnmWinSocket.c
